--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -17,15 +17,15 @@ Fonts are separated by a & */
   --paragraph-font: Lato, Helvetica, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
-  --headline-color-on-white: #396E94;  /* headlines on a white background */ 
-  --headline-color-on-color: white; /* headlines on a colored background */ 
-  --paragraph-color-on-white: #396E94; /* paragraph text on a white background */ 
-  --paragraph-color-on-color: white; /* paragraph text on a colored background */ 
-  --paragraph-background-color: #396E94  ;
-  --nav-link-color: #396E94;
-  --nav-background-color: #D4AC0D;
-  --nav-hover-link-color: white;
-  --nav-hover-background-color: #396E94;
+  --headline-color-on-white: #1c4e72;  /* headlines on a white background */ 
+  --headline-color-on-color: #c3ebe1; /* headlines on a colored background */ 
+  --paragraph-color-on-white: #277e99; /* paragraph text on a white background */ 
+  --paragraph-color-on-color: #c3ebe1; /* paragraph text on a colored background */ 
+  --paragraph-background-color: #1c4e72  ;
+  --nav-link-color: #277e99;
+  --nav-background-color: #ecc348;
+  --nav-hover-link-color: #c3ebe1;
+  --nav-hover-background-color: #1c4e72;
 }
 
 
