--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -22,10 +22,10 @@ Fonts are separated by a & */
   --paragraph-color-on-white: #277e99; /* paragraph text on a white background */ 
   --paragraph-color-on-color: #c3ebe1; /* paragraph text on a colored background */ 
   --paragraph-background-color: #1c4e72  ;
-  --nav-link-color: #2c5ca5;
-  --nav-background-color: #0b0563;
+  --nav-link-color: #054bb4;
+  --nav-background-color: #945d15;
   --nav-hover-link-color: #c3ebe1;
-  --nav-hover-background-color: #1c4e72;
+  --nav-hover-background-color: #042d4b;
 }
 
 
