changed nav background color

--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -23,7 +23,7 @@ Fonts are separated by a & */
   --paragraph-color-on-color: #c3ebe1; /* paragraph text on a colored background */ 
   --paragraph-background-color: #1c4e72  ;
   --nav-link-color: #054bb4;
-  --nav-background-color: #945d15;
+  --nav-background-color: #ca862c;
   --nav-hover-link-color: #c3ebe1;
   --nav-hover-background-color: #042d4b;
 }
