--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -1,14 +1,28 @@
+@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
+
 #content{
     max-width: 1600px;
     margin: 0 auto;
 }
 
 body{
+    font-family: "Lato", sans-serif, serif;
     background-color: lightblue;
+    font-size: 22px;
+    margin: 0;
+    padding: 0;
+}
+
+main section img{
+    box-sizing: border-box;
 }
 
 header{
     background-color: rgb(73, 196, 236);
+}
+
+#logo-link{
+    padding-top: 5px;
 }
 
 .logo{
@@ -19,6 +33,7 @@ nav a{
     text-align: center;
     color: rgb(8, 8, 138);
     text-decoration: none;
+    padding: 35px;
 }
 
 nav a:hover{
@@ -31,21 +46,33 @@ nav a:hover{
 }
 
 #hero-msg h1, #hero-msg h4{
+
     text-align: center;
 }
 
 .home-title{
+    font-size: 2em;
+    font-family: "permanent Marker", sans-serif, Arial;
     color: rgb(219, 22, 22);
+    margin-top: 10px;
 }
 
 h4{
     color: rgb(211, 50, 50);
 }
 
+h2{
+    margin: 0;
+}
+
 .book, .join{
     background-color: rgb(73, 196, 236);
     color: rgb(0, 0, 0);
     text-decoration: none;
+    font-size: 18px;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
 }
 
 .book:hover, .join:hover{
@@ -63,6 +90,7 @@ h4{
 
 .icon{
     width: 80px;
+    padding-top: 10px;
 }
 
 #background {
@@ -72,6 +100,16 @@ h4{
 
 .msg{
     background-color: rgb(91, 219, 219);
+    line-height: 1.5em;
+    padding: 35px;
+}
+
+.card-img{
+    border: 10px solid black;
+}
+
+.river-card, .camping-card, .rapids-card{
+    margin: 200px 0;
 }
 
 .msg h2{
@@ -79,12 +117,16 @@ h4{
 }
 
 .msg p{
+    font-size: .8em;
     color: black;
+    padding-bottom: 15px;
 }
 
 footer{
     background-color: rgb(214, 214, 93);
     color: black;
+    padding: 25px 50px;
+    margin-top: 200px;
 }
 
 footer a{
@@ -102,4 +144,8 @@ footer p{
 
 footer p a:hover{
     text-decoration: underline;
+}
+
+footer .social img{
+    padding-top: 15px;
 }
