--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -108,7 +108,7 @@ h2{
     border: 10px solid black;
 }
 
-.river-card, .camping-card, .rapids-card{
+.river-cards, .camping-card, .rapids-card{
     margin: 200px 0;
 }
 
