Finished home page wwr

--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -18,15 +18,24 @@ main section img{
 }
 
 header{
+    display: grid;
+    grid-template-columns: 150px auto;
     background-color: rgb(73, 196, 236);
 }
 
-#logo-link{
+#logo_link{
     padding-top: 5px;
+    justify-self: center;
+    align-self: center;
 }
 
 .logo{
     width: 80px;
+}
+
+nav {
+    display: flex;
+    justify-content: space-around;
 }
 
 nav a{
@@ -41,13 +50,34 @@ nav a:hover{
     color: rgb(211, 184, 150);
 }
 
+#hero {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px; 
+}
+
+#hero-box{
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
+
 #hero-img{
     width: 100%;
+}
+#hero-msg {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
 }
 
 #hero-msg h1, #hero-msg h4{
 
     text-align: center;
+}
+
+#hero-msg h4{
+    color: white;
 }
 
 .home-title{
@@ -86,6 +116,8 @@ h2{
 
 .home-grid{
     text-align: center;
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
 }
 
 .icon{
@@ -96,24 +128,58 @@ h2{
 #background {
     height: 725px;
     background-color: rgb(1, 1, 241);
+    grid-column: 1/11;
+    grid-row: 4/9;
 }
 
 .msg{
     background-color: rgb(91, 219, 219);
     line-height: 1.5em;
     padding: 35px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+
+.card-img, .mountains {
+    width: 100%;
 }
 
 .card-img{
     border: 10px solid black;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #6f7364;
 }
 
-.river-cards, .camping-card, .rapids-card{
+.card-img:hover {
+    opacity: .6;
+    transform: scale(1.1);
+}
+
+.rivers-card, .camping-card, .rapids-card{
     margin: 200px 0;
+}
+
+.rivers-card{
+    grid-column: 2/4;
+    grid-row: 2/3;
+}
+
+.camping-card{
+    grid-column: 5/7;
+    grid-row: 2/3;
+}
+
+.rapids-card{
+    grid-column: 8/10;
+    grid-row: 2/3;
 }
 
 .mountains{
     margin: 100px 0;
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #6f7364;
 }
 
 .msg h2{
@@ -131,6 +197,9 @@ footer{
     color: black;
     padding: 25px 50px;
     margin-top: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
 footer a{
@@ -152,4 +221,46 @@ footer p a:hover{
 
 footer .social img{
     padding-top: 15px;
+}
+
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    .home-title {
+        font-size: 25px;
+        color: #6f7364;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
 }
