--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -221,6 +221,7 @@ footer p a:hover{
 
 footer .social img{
     padding-top: 15px;
+    padding-bottom: 15px;
 }
 
 @media screen and (max-width: 900px) {
