--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -264,3 +264,70 @@ footer .social img{
         margin-top: 25px;
     }
 }
+
+/* About Us page*/
+#gridau{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+#grand{
+    width: 100%;
+    z-index: 1;
+}
+
+#heroau{
+    grid-column: 1/3;
+    grid-row: 1/2;
+}
+
+#h1au{
+    z-index: 2;
+    margin: auto auto;
+    font-size: 2em;
+    grid-column: 1/3;
+    grid-row: 1/2;
+}
+
+.p1img{
+    grid-column: 1/2;
+    grid-row: 2/3;
+    margin: auto auto;
+    padding-top: 15%;
+}
+
+#p1msg{
+    grid-column: 2/3;
+    grid-row: 2/3;
+    padding-left: 15%;
+    font-size: 1.7em;
+    padding-top: 15%;
+}
+
+#img1{
+    border-style: solid;
+    width: 550px;
+    height: 400px;
+    border-radius: 25%;
+}
+
+.p2img{
+    grid-column: 2/3;
+    grid-row: 3/4;
+    margin: auto auto;
+    padding-top: 17%;
+}
+
+#p2msg{
+    grid-column: 1/2;
+    grid-row: 3/4;
+    padding-top: 17%;
+    font-size: 1.7em;
+    padding-left: 20%;
+}
+
+#img2{
+    border-style: solid;
+    width: 550px;
+    border-radius: 25%;
+}
